# SMesh

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md  justfile
.github/workflows/: publish.yml  rust.yml
examples/: bevy_mesh.rs  extrude.rs  tree.rs  uv_unwrap.rs  visualizer.rs
src/: attribute.rs  error.rs  iterators.rs  lib.rs  mesh_query.rs  prelude.rs  smesh.rs  test_utils.rs  tests.rs  topological_operations.rs
src/adapters/: bevy.rs  mod.rs
src/smesh/: attribute.rs  edit_operations.rs  error.rs  iterators.rs  loops.rs  mesh_query.rs  mod.rs  primitives.rs  query.rs  selection.rs  topological_operations.rs  transform.rs  util.rs  uv_operations.rs  uv_utils.rs  xatlas_integration.rs
src/smesh/model/: connectivity.rs  mesh.rs  mesh_elements.rs  mod.rs
