[package]
name = "smesh"
version = "0.2.3"
edition = "2021"
authors = ["Ben Dzaebel <ben@bendz.dev>"]
hompage = "bendz.dev"
license = "MPL"
repository = "https://github.com/Bendzae/SMesh"
keywords = ["mesh", "halfedge", "procedural", "polygon", "3D"]
description = "A fast and ergonomic surface-mesh/halfedge-mesh implementation and polygon mesh manipulation library based on pmp"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27.0"      # Tracking bevys glam version for convencience
slotmap = "1.0.7"
itertools = "0.13.0"
thiserror = "1.0.63"
sprs = "0.11.2"

# Adapter dependencies
bevy = { version = "0.14", default-features = false, features = [
  "bevy_pbr",
  "bevy_ui",
  "bevy_gizmos",
], optional = true }

[dev-dependencies]
bevy = "0.14.2"
bevy_panorbit_camera = { version = "0.19.3", features = ["bevy_egui"] }
bevy-inspector-egui = "0.26"
fastrand = "2.1.1"
fastrand-contrib = "0.1.0"


[features]
default = ["bevy_adapter"]
bevy_adapter = ["dep:bevy"]
